# diskdevil

./: .gitignore  Cargo.toml  Makefile.am  README  README.org  README.txt  _readme.org  config.status  configure  configure.ac  flake.nix  numbers.cpp.rs  rust-project.json.in
.github/: tests.sh
.github/workflows/: release.yml  tests.yml
src/: Makefile.am  args.rs  asm.rs  colours.rs  config.rs.in  main.rs  numbers.cpp.rs  syscalls.rs  test_main.rs  writer.rs
test/: Makefile.am  diskdevil.test
